--- a/Alicargo.Tests/App.config
+++ b/Alicargo.Tests/App.config
@@ -20,9 +20,7 @@
 		<add key="StateId-CargoOnTransit" value="12" />
 	</appSettings>
 	<connectionStrings>
-  <add name="Alicargo.Tests.Properties.Settings.MainConnectionString"
-   connectionString="Data Source=.\;Initial Catalog=Alicargo;Integrated Security=True;Application Name=Alicargo.Tests"
-   providerName="System.Data.SqlClient" />
+  <add name="Alicargo.Tests.Properties.Settings.MainConnectionString" connectionString="Data Source=.\;Initial Catalog=Alicargo;Integrated Security=True;Application Name=Alicargo.Tests" providerName="System.Data.SqlClient" />
  </connectionStrings>
 	<system.net>
 		<mailSettings>
