--- a/Alicargo.DataAccess.Tests/App.config
+++ b/Alicargo.DataAccess.Tests/App.config
@@ -3,7 +3,7 @@
 	<configSections>
  </configSections>
  <connectionStrings>
-  <add name="MainConnectionString" connectionString="Data Source=.\;Initial Catalog=Alicargo;Integrated Security=True" providerName="System.Data.SqlClient" />
+  <add name="MainConnectionString" connectionString="Data Source=.\sqlexpress;Initial Catalog=Alicargo;Integrated Security=True" providerName="System.Data.SqlClient" />
   <add name="Alicargo.DataAccess.Tests.Properties.Settings.MainConnectionString" connectionString="Data Source=.\;Initial Catalog=Alicargo;Integrated Security=True" />
  </connectionStrings>
   <runtime>
