--- a/Alicargo.DataAccess.Tests/App.config
+++ b/Alicargo.DataAccess.Tests/App.config
@@ -1,21 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
-	<configSections>
- </configSections>
- <connectionStrings>
-  <add name="MainConnectionString" connectionString="Data Source=.\sqlexpress;Initial Catalog=Alicargo;Integrated Security=True" providerName="System.Data.SqlClient" />
-  <add name="Alicargo.DataAccess.Tests.Properties.Settings.MainConnectionString" connectionString="Data Source=.\;Initial Catalog=Alicargo;Integrated Security=True" />
- </connectionStrings>
-  <runtime>
-    <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
-      <dependentAssembly>
-        <assemblyIdentity name="Moq" publicKeyToken="69f491c39445e920" culture="neutral" />
-        <bindingRedirect oldVersion="0.0.0.0-4.0.10827.0" newVersion="4.0.10827.0" />
-      </dependentAssembly>
-      <dependentAssembly>
-        <assemblyIdentity name="Ploeh.AutoFixture" publicKeyToken="b24654c590009d4f" culture="neutral" />
-        <bindingRedirect oldVersion="0.0.0.0-3.6.6.0" newVersion="3.6.6.0" />
-      </dependentAssembly>
-    </assemblyBinding>
-  </runtime>
+  <connectionStrings>
+    <add name="Alicargo.DataAccess.Tests.Properties.Settings.MainConnectionString"
+        connectionString="Data Source=.\sqlexpress;Initial Catalog=Alicargo;Integrated Security=True"
+        providerName="" />
+  </connectionStrings>
 </configuration>
