--- a/Alicargo.DataAccess.Tests/App.config
+++ b/Alicargo.DataAccess.Tests/App.config
@@ -1,8 +1,14 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
   <connectionStrings>
-    <add name="Alicargo.DataAccess.Tests.Properties.Settings.MainConnectionString"
-        connectionString="Data Source=.\sqlexpress;Initial Catalog=Alicargo;Integrated Security=True"
-        providerName="" />
+    <add name="Alicargo.DataAccess.Tests.Properties.Settings.MainConnectionString" connectionString="Data Source=.\sqlexpress;Initial Catalog=Alicargo;Integrated Security=True" providerName="" />
   </connectionStrings>
+  <runtime>
+    <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
+      <dependentAssembly>
+        <assemblyIdentity name="Moq" publicKeyToken="69f491c39445e920" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-4.0.10827.0" newVersion="4.0.10827.0" />
+      </dependentAssembly>
+    </assemblyBinding>
+  </runtime>
 </configuration>
