--- a/Alicargo.DataAccess.Tests/packages.config
+++ b/Alicargo.DataAccess.Tests/packages.config
@@ -2,6 +2,7 @@
 <packages>
   <package id="AutoFixture" version="3.6.6" targetFramework="net45" />
   <package id="AutoFixture.AutoMoq" version="3.6.6" targetFramework="net45" />
+  <package id="EmitMapper" version="1.0.0" targetFramework="net45" />
   <package id="FluentAssertions" version="2.0.1" targetFramework="net45" />
   <package id="Moq" version="4.0.10827" targetFramework="net45" />
 </packages>
