--- a/Alicargo.DataAccess.Tests/Alicargo.DataAccess.Tests.csproj
+++ b/Alicargo.DataAccess.Tests/Alicargo.DataAccess.Tests.csproj
@@ -90,6 +90,7 @@
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
       <DependentUpon>Settings.settings</DependentUpon>
     </Compile>
+    <Compile Include="Repositories\AuthenticationRepositoryTests.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Alicargo.Contracts\Alicargo.Contracts.csproj">
