added ApplicationListItemMapper, PathConstants

--- a/Alicargo.Tests/Alicargo.Tests.csproj
+++ b/Alicargo.Tests/Alicargo.Tests.csproj
@@ -119,6 +119,7 @@
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
       <DependentUpon>Settings.settings</DependentUpon>
     </Compile>
+    <Compile Include="Services\Application\ApplicationGrouperTests.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="App.config" />
